# rs

./: CMakeLists.txt
include/: rs.h  rule.h  singleton.hpp  singleton_ptr.hpp
include/meta/: isnumber.hpp  type.hpp
src/: main.cpp  rule.cpp
